hphp/test/slow/reified_generics/shape-key.php.expectf
Fatal error: Reified generics cannot be used in shape keys in %s on line 9
